add books issue #4

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,12 +10,19 @@
  <!-- Cabecera -->
  <header>
 
+ 
+
  <h1>Este es mi Blog </h1>
  </header>
  <!-- Contenido -->
  <section>
 <b>Libros</b>
- <p>Contenido sobre libros</p>
+ 
+    <ul>
+    <li>Reina Roja</li>
+    <li>La Suerte del Enano</li>
+    <li>El paciente</li>
+    </ul>
 </section>
  <section>
 <b>Películas</b>
