--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,15 +15,23 @@
  <!-- Contenido -->
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+  <ul>
+    <li>Harry Potter y la piedra filosofal</li>
+    <li>Caperucita en Manhatan</li>
+    <li>El principe de la niebla</li>
+  </ul>
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido)</p>
- </section>
- <!-- Pie de pagina -->
+ <ul>
+   <li>Harry Potter y la piedra filosofal</li>
+   <li>Charly y la fabrica de chocolate</li>
+   <li>Los increibles</li>
+ </ul>
  <footer>
  (c) Evolución y Mantenimiento Software
  </footer>
 </body>
 </html>
+ </section>
+ <!-- Pie de pagina -->
